# com.nfysoft.gamecubecontroller

./: .gitignore
Plugin-source/: CMakeLists.txt  Makefile  cmake_install.cmake
Plugin-source/src/: export_header.h  gcc_adapter.cpp
